--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 <a href="Chinese-Echo/html/contact.html">联系我们</a>
             </div>
             <div class="social-links">
-                <a href="Chinese-Echo/html/index.html"><img src="img/logo/logo2.png" alt="Chinese Echo"></a>
-                <a href="Chinese-Echo/https://www.facebook.com/"><img src="img/logo/facebook.jpg" alt="Facebook"></a>
-                <a href="Chinese-Echo/https://x.com/"><img src="img/logo/x.jpg" alt="X"></a>
-                <a href="Chinese-Echo/https://www.instagram.com/"><img src="img/logo/is.jpg" alt="Instagram"></a>
+                <a href="Chinese-Echo/html/index.html"><img src="Chinese-Echo/img/logo/logo2.png" alt="Chinese Echo"></a>
+                <a href="Chinese-Echo/https://www.facebook.com/"><img src="Chinese-Echo/img/logo/facebook.jpg" alt="Facebook"></a>
+                <a href="Chinese-Echo/https://x.com/"><img src="Chinese-Echo/img/logo/x.jpg" alt="X"></a>
+                <a href="Chinese-Echo/https://www.instagram.com/"><img src="Chinese-Echo/img/logo/is.jpg" alt="Instagram"></a>
             </div>
         </div>
         <div class="copyright">
