--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <p>高中时代初学Python时自创的一个加密算法</p>
                 <p>英文字符加密算法完工于2021年11月</p>
                 <p>webui及中文加密补丁完工于2025年3月</p>
+                <p>由于github.io静态托管限制，加密功能暂不开放</p>
             </div>
             <div class="project-item">
                 <h3>诗集</h3>
