--- a/hy4.html
+++ b/hy4.html
@@ -89,7 +89,7 @@
                     }
                 },
                 error: function(error) {
-                    document.getElementById('outputBox').textContent = "加密失败";
+                    document.getElementById('outputBox').textContent = "由于github.io托管限制，暂不提供加密服务，敬请期待！";
                 }
             });
         }
@@ -110,7 +110,7 @@
                     }
                 },
                 error: function(error) {
-                    document.getElementById('outputBox').textContent = "解密失败";
+                    document.getElementById('outputBox').textContent = "由于github.io托管限制，暂不提供解密服务，敬请期待！";
                 }
             });
         }
