--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <h3>相册</h3>
                 <p><a href="http://localhost:15200/">鸣潮那些事儿</a></p>
                 <p>一个动态电子相册~</p>
+                <p>暂不开放，敬请期待</p>
             </div>
             <div class="project-item">
                 <h3>诗集</h3>
